# bank

./: build-apk.yml
Материалы/: Открытые API котировок.txt  План разработки Android-прототипа.md  ТЗ Биржевой брокер.docx  аналогичные проекты.txt
Материалы/Основные интерфейсы/Беларусбанк/: README.md  generate_mockups.py
Реализация/: .env.example  .gitignore  README.md  build_apk.ps1  build_web.ps1  requirements.txt  run_backend.ps1  run_web.ps1  start_demo.ps1  test_all.ps1
Реализация/.github/workflows/: build-apk.yml
Реализация/backend/broker/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
Реализация/backend/broker/management/commands/: seed_demo.py
Реализация/backend/broker/migrations/: 0001_initial.py
Реализация/backend/config/: settings.py  urls.py
Реализация/mobile/: README.md  pyproject.toml
Реализация/mobile/src/: api.py  helpers.py  main.py
Реализация/mobile/tests/: test_api.py  test_helpers.py  test_ui_smoke.py
